add - skim the html code

--- a/all_codes_per_chapters/ch3/3.5.html
+++ b/all_codes_per_chapters/ch3/3.5.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <table>
-        <tr>
-            <td>1</td>
+        <tr> <!-- row 하나. 로우 하나 만듦 -->
+            <td>1</td> <!-- data 하나. 셀 하나 만듦 -->
             <td>2</td>
             <td>3</td>
         </tr>
@@ -19,9 +19,9 @@
     </table>
 
     <table>
-        <thead>
+        <thead> <!-- table가장 위쪽에 나옴 -->
             <tr>
-                <th>1</th>
+                <th>1</th> <!-- th : thead내용. 굵은글씨 -->
                 <th>2</th>
                 <th>3</th>
             </tr>
