--- a/all_codes_per_chapters/ch3/3.6.html
+++ b/all_codes_per_chapters/ch3/3.6.html
@@ -5,11 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-    <input type="text" value="test1">
+    <input type="text" value="test1"> <!-- 사용자가 입력할 수 있는 text박스 하나 만들어지고, 그 안에 임의로 test1로 채워둔다. -->
     <input type="text" value="test2">
     <input type="text" value="test3">
 
-    <button>bt1</button>
+    <button>bt1</button> <!-- 버튼 하나 만들고, 버튼 이름 bt1 -->
     <button>bt2</button>
     <button>bt3</button>
 
