--- a/all_codes_per_chapters/ch3/3.7.html
+++ b/all_codes_per_chapters/ch3/3.7.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <select name="address">
+    <select name="address"> <!-- select: 여러 옵션 중 선택할 수 있게 하는 것 -->
         <option value="">주소선택</option>
         <option value="파주">파주</option>
         <option value="혜화">혜화</option>
