--- a/all_codes_per_chapters/ch3/3.8.html
+++ b/all_codes_per_chapters/ch3/3.8.html
@@ -8,8 +8,8 @@
 
     <ul>
         <li>
-            <a href="http://www.naver.com">네이버로 이동하기</a>
-            <a href="http://www.google.com">구글로 이동하기</a>
+            <a href="http://www.naver.com">네이버로 이동하기</a> <!-- href: 속성. 해당 태그를 완벽하게 구현하기 위한 기능을 넣는 곳. 태그마다 다름 -->
+            <a href="http://www.google.com">구글로 이동하기</a> <!-- a: 링크 -->
             <a href="http://www.facebook.com">페이스북으로 이동하기</a>
         </li>
         <li>
