--- a/all_codes_per_chapters/ch3/3.4.html
+++ b/all_codes_per_chapters/ch3/3.4.html
@@ -5,14 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-    <ul>
+    <ul> <!--unordered list : 순서 없는 리스트-->
         <li>1</li>
         <li>2</li>
         <li>3</li>
         <li>4</li>
     </ul>
 
-    <ol>
+    <ol> <!--ordered list : 순서 있는 리스트-->
         <li>10</li>
         <li>11</li>
         <li>12</li>
