add - import requests as rq, rq.get(url)

--- a/all_codes_per_chapters/ch3/3.13.html
+++ b/all_codes_per_chapters/ch3/3.13.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+     <!-- 
+     css. 따로 파일 만들지 않고 이렇게 style 태그 안에 써줄 수도 있음.
+     p라는 태그는 이렇게 디자인 해주세요~
+     li라는 태그는 이렇게 디자인 해주세요~ 
+     -->
     <style>
-        p{
-            font-size: 17px;
-            color: blue;
+        p{ 
+            font-size: 30px;
+            color: red;
         }
 
-        li{
+        li{ 
             list-style-type: none;
         }
     </style>
