--- a/all_codes_per_chapters/ch3/3.16.html
+++ b/all_codes_per_chapters/ch3/3.16.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- 어떤 태그인지 상관 없이, target이라는 이름의 id는 이렇게 꾸며주세요~ -->
     <style>
         #target{
             font-size: 40px;
