--- a/all_codes_per_chapters/ch3/3.18.html
+++ b/all_codes_per_chapters/ch3/3.18.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- 
+    한 칸 띄우면 '자식' !!
+    
+    div#container p : div라는 태그 중 id가 container인 애들의 '자식' 중에서 p태그 
+    div#container div#wrap1 h3 : div라는 태그 중 id가 container인 애들의 '자식' 중에서 div태그 중 id가 wrap1인 애들의 '자식' 중에서 h3태그. 
+    -->
+    
     <style>
         .title{
             font-size: 20px;
