--- a/all_codes_per_chapters/ch3/3.9.html
+++ b/all_codes_per_chapters/ch3/3.9.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <img src="frog.png" alt="개구리">
+    <img src="frog.png" alt="개구리"> <!-- img:이미지태그. 지금 이 주소에 frog.png파일 들어있으므로 열림.  -->
 </body>
 </html>
