--- a/all_codes_per_chapters/ch3/3.14.html
+++ b/all_codes_per_chapters/ch3/3.14.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+     <!-- 
+     id:하나의 id는 하나만 가리킴. class:여러 개 소속될수 있음.
+     id는 #id{ }, class는 .class{ } 
+     
+     p.p-target : p라는 태그에서 p-target속성은 이렇게 디자인 해주세요~ 
+     li.li-target : li라는 태그에서 li-target속성은 이렇게 디자인 해주세요~ 
+     list-style-type: none; : 리스트 표시하는 앞의 표기 없애주세요~
+     -->
     <style>
         p.p-target{
-            font-size: 17px;
-            color: blue;
+            font-size: 30px;
+            color: red;
         }
 
         li.li-target{
