--- a/all_codes_per_chapters/ch3/3.15.html
+++ b/all_codes_per_chapters/ch3/3.15.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- 어떤 태그인지 상관 없이, target이라는 이름의 클래스는 전부 이렇게 꾸며주세요~ -->
     <style>
         .target{
             font-size: 40px;
@@ -14,6 +15,6 @@
     <h1>h1 태그</h1>
     <h2 class="target">h2 태그</h2>
     <h3>h3 태그</h3>
-    <a href="/" class="target">a 태그</a>
+    <a href="http://www.daum.net" class="target">a 태그</a>
 </body>
 </html>
